[package]
name = "svc-coder"
version = "0.0.1"
authors = ["Cameron <cameron.manavian@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = { version = "4.0.0-rc.2", default-features = false, features = ["macros"] }
anyhow = "1.0.53"
async-graphql = {version = "3.0.29", default-features = false, features = ["chrono", "uuid"] }
async-graphql-actix-web = "3.0.29"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"

log = "0.4.14"
serde = "1.0.136"
sqlx = { version = "0.5.10", features = ["runtime-actix-native-tls","uuid","postgres","chrono","macros"] }
uuid = { version = "0.8.2", features = ["serde","v4"] }


tracing-actix-web = "=0.5.1"
tracing-opentelemetry = "0.17"
tracing="0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
opentelemetry = { version = "0.17",features = ["rt-tokio"] }
opentelemetry-zipkin = { version="0.15"}
